flake-modules/software/waybar/configs/direct-symlink.css
* {
  font-family: "PragmataPro Liga";
  font-size: 14px;
}

@keyframes blink {
  to {
    background-color: #ffffff;
    color: #000000;
  }
}

window#waybar {
  background-color: alpha(@base00, 0.05);
}

/* Module sections and general modules */

.module,
#privacy {
  padding: 0 8px;
  padding-top: 4px;
  padding-bottom: 2px;
  /* Handy for debugging */
  /* border-left: 1px solid blue; */
  /* border-right: 1px solid blue; */
}

.modules-left .module {
  margin-right: 10px;
}

.modules-left .module,
.modules-center .module,
#privacy,
.modules-right {
  transition: all;
  background-color: @base01;
  color: @base04;
  border-top: 1px solid mix(@base00, white, 0.35);
  /* Handy for debugging */
  /* border-left: 1px solid red; */
  /* border-right: 1px solid red; */
}

.modules-left .module:not(#workspaces),
.modules-center .module,
#privacy {
  border-radius: 5px 5px 0 0;
  margin: 0 5px;
  border-radius: 5px 5px 0 0;
  padding-left: 12px;
  padding-right: 12px;
}

#privacy {
  background-color: @base08;
  border-top-color: mix(@base08, white, 0.35);
}

.modules-right {
  border-top-left-radius: 5px;
}

.modules-right widget:first-child .module {
  padding-left: 16px;
}

/* Per-module tweaks */

/* .modules-left #workspaces button.urgent { */
/*   background: #bf616a; */
/* } */

.modules-left #workspaces {
  padding: 0;
  border-top-right-radius: 5px;
}

#workspaces button {
  /* padding: 0 5px; */
  background: transparent;
  color: #eceff4;
  border-radius: 5px;
  padding-top: 4px;
}

#workspaces button.active {
  background: #4c566a;
}

window#waybar.empty #window {
  background: transparent;
  border-color: transparent;
}

#battery.charging {
  background-color: #a3be8c;
  color: rgba(46, 52, 64, 0.9);
  padding-left: 6px;
  padding-right: 6px;
  margin-right: 12px;
}

#battery.warning:not(.charging) {
  background: #bf616a;
  animation-name: blink;
  animation-duration: 0.75s;
  animation-timing-function: linear;
  animation-iteration-count: infinite;
  animation-direction: alternate;
  padding-left: 6px;
  padding-right: 6px;
  margin-right: 12px;
}

#tray {
  padding-top: 2px;
  padding-left: 12px;
}

#custom-notification {
  padding-top: 1px;
  min-width: 25px;
}

/* Tooltips */

tooltip {
  background: alpha(@base01, 0.95);
  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.5);
  border-color: @base02;
  border-top-color: mix(@base00, white, 0.35);
  border-bottom-color: mix(@base00, black, 0.35);
  text-shadow: none;
  font-size: 14px;
  padding: 4px;
  margin: 0;
}

tooltip label {
  color: #eceff4;
}

